<resources>
    <string name="welcome">欢迎使用</string>
    <string name="app_name">小笨猴</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">用户头像</string>
    <string name="nav_header_subtitle">如果没有头像会显示安卓机器人图标</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_stats">统计报表</string>
    <string name="menu_setting">设置·关于</string>

    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="menu_home">主页</string>
    <string name="login">登录</string>
    <string name="registry">注册</string>

    <!-- 字典翻译 beg -->
    <string name="dict_day">日</string>
    <string name="dict_month">月</string>
    <string name="dict_year">年</string>
    <string name="dict_acc_type">账户类型</string>
    <string name="dict_acc_name">账户名称</string>
    <string name="dict_acc_balance">账户余额</string>
    <string name="dict_no_data">暂无数据</string>

</resources>