<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activity.AccAddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/item_padding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dict_acc_type" />

            <ImageView
                android:id="@+id/iv_acc_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_other_acc"
                android:layout_marginEnd="@dimen/padding_m"/>

            <TextView
                android:id="@+id/tv_acc_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_acc_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dict_acc_name"
            android:inputType="text"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/et_acc_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dict_acc_balance"
            android:inputType="numberDecimal"
            tools:ignore="Autofill" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_padding"
        android:text="保存" />

</LinearLayout>